<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circle="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <in.epdshp.co.epds_hppresentationui.CircleImageView
        android:id="@+id/main_info"
        circle:name="@string/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_info" />

    <in.epdshp.co.epds_hppresentationui.CircleImageView
        android:id="@+id/main_cloud_image"
        circle:name="@string/cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_cloud" />

    <in.epdshp.co.epds_hppresentationui.CircleImageView
        android:id="@+id/main_ration_card_image"
        circle:name="@string/business_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_ration_card" />

      <in.epdshp.co.epds_hppresentationui.CircleImageView
        android:id="@+id/main_facebook_image"
        circle:name="@string/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_facebook" />

    <in.epdshp.co.epds_hppresentationui.CircleImageView
        android:id="@+id/main_key_image"
        circle:name="@string/key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_key" />

    <in.epdshp.co.epds_hppresentationui.CircleImageView
        android:id="@+id/main_profile_image"
        circle:name="@string/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_profile" />

    <in.epdshp.co.epds_hppresentationui.CircleImageView
        android:id="@+id/main_tap_phone"
        circle:name="@string/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_phone" />




</merge>